--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,11 @@ certifi==2018.4.16
 chardet==3.0.4
 click==6.7
 Flask==1.0.2
+gunicorn=20.1
 idna==2.7
 itsdangerous==0.24
 Jinja2==2.11.3
-MarkupSafe==1.0
+MarkupSafe==1.1
 requests==2.20.0
 urllib3==1.24.2
 Werkzeug==0.15.5
