--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ certifi==2018.4.16
 chardet==3.0.4
 click==6.7
 Flask==1.0.2
-gunicorn=20.1
+gunicorn==20.1
 idna==2.7
 itsdangerous==0.24
 Jinja2==2.11.3
