--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,8 @@ importlib-metadata==6.6.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
+mysql-connector-python==8.0.33
+protobuf==3.20.3
 requests==2.31.0
 urllib3==2.0.2
 Werkzeug==2.3.4
