--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,9 @@ itsdangerous==2.1.2
 Jinja2==3.1.4
 MarkupSafe==2.1.2
 mysql-connector-python==9.1.0
+packaging==24.1
 protobuf==3.20.3
-requests==2.32.0
+requests==2.32.3
 urllib3==2.2.2
 Werkzeug==3.0.6
 zipp==3.19.1
